--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "build": "npx tsc",
     "start": "node dist/index.js"
   },
+  "type": "module",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chatgpt": "^4.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
