--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.4",
+    "openai": "^3.2.1",
     "pino-http": "^8.3.0",
     "type-fest": "^3.4.0",
     "uuid": "^9.0.0"
