--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint:fix": "eslint --fix",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "prepare": "husky install",
-    "build": "npx tsc",
-    "start": "node dist/index.js"
+    "build": "yarn tsc",
+    "start": "node --es-module-specifier-resolution=node dist/index.js"
   },
   "type": "module",
   "dependencies": {
