--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
-    "lib": ["esnext"],
+    "lib": ["ES6", "DOM"],
     "esModuleInterop": true,
     "typeRoots": ["./types", "./node_modules/@types"],
     "module": "ES6",
